--- a/ui/src/app/App.css
+++ b/ui/src/app/App.css
@@ -1,38 +1,270 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  font-family: Verdana;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+input {    
+  outline: 0;
+}
+
+.logo {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  align-items: center;
+}
+
+.main-logo {
+  font-size: 65px;
+  font-stretch: ultra-condensed;
+  background: linear-gradient(45deg, #485b7d 33%, #0D61BC 66%, #8AA9D6);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.wrap-mini-logo {
+  height: 100px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 5px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.top-logo, .bottom-logo {
+  font-style: italic;
+  color: #4d4e4f;
+}
+
+.cars-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.car {
+  height: 150px;
+  width: 600px;
+  border: 1px solid #d6dde5;
+  border-radius: 7px;
+  margin: 20px;
+  margin-top: 0;
+  transition: all 0.2s;
+  user-select: none;
+  background-color: white;
+  z-index: 999;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  
+}
+
+.car:hover {
+  box-shadow: 0px 0px 3px 3px #e0e7f3;
+  cursor: pointer;
+}
+
+.search {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  justify-content: space-between;
+  align-items: center;
+  width: 600px;
+}
+
+.search-field {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.input-text {
+  border: none;
+  border-bottom: solid 1px silver;
+  height: 30px;
+  padding-left: 10px;
+  padding-right: 10px;    
+  font-size: 18px;
+  color: grey;
+  width: 300px;
+  transition: all 0.2s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-text:focus {
+  color: black;
+  border-bottom: solid 1px rgb(64, 125, 205);
+}
+
+.wrap-search-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-left: 15px;
+}
+
+.search-button {
+  position: relative;    
+  width: 20px;
+  height: 20px;    
+  box-sizing: border-box;
+  background-color: white;    
+  border: 3px solid slategray;
+  border-radius: 50%;
+  transition: all 0.1s;
+}
+
+.wrap-search-button:hover .search-button {
+  border-color: rgb(7, 107, 207);
+}
+
+.wrap-search-button:hover .search-button:after {
+  background-color: rgb(7, 107, 207);
+}
+
+.search-button:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;    
+  width: 10px;
+  height: 3px;
+  background-color: slategray;    
+  border-radius: 0 1.5px 1.5px 0;    
+  transform-origin: 0 50%;
+  transform: translateX(100%) rotate(45deg);
+}
+
+.wrap-search-button:active .search-button {
+  width: 19px;
+  height: 19px;
+  margin-left: 1px;
+}
+
+.svg-1 {
+  position: absolute;
+  top: 220px;
+  left: -180px;
+}
+
+.wrap-car-info {
+  margin-top: -20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.main-info-car {
+  margin-top: 0;
+  font-size: 17px;
+  height: 50px;
+  width: auto;
+  max-width: 150px;
+}
+
+.dop-info-car {
+  font-size: 10px;
+  margin: 0 3px 3px 3px;    
+  color: #4d4e4f;
+  margin-bottom: 14px;
+}
+
+
+.wrap-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 60px;
+  width: 600px;
+}
+
+.wrap-change-button:hover, .wrap-delete-button:hover, .wrap-submit-button:hover, .submit-back:hover, .create-button:hover {
+  cursor: pointer;
+}
+
+.submit-back {
+  width: 150px;
+  height: 50px;
+  border: solid 2px rgb(101, 157, 198);
+  border-radius: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrap-car-info {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.first-info, .second-info {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.info-field {
+  margin: 50px;
+  
+}
+
+.info-field input {
+  border: none;
+  height: 30px;
+  font-size: 18px;
+  border-bottom: solid 1px silver;
+  text-align:center;
+}
+
+.wrap-submit-button {
+  margin-top: 20px;
+  width: 100px;
+  height: 50px;
+  border: solid 2px rgb(101, 157, 198);
+  border-radius: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrap-submit-button {
+  width: 100px;
+  height: 50px;
+  border-radius: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  border: none;
+}
+
+.create-button {
+  margin-top: 20px;
+  width: 100px;
+  height: 50px;
+  border: solid 2px rgb(101, 157, 198);
+  border-radius: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
 }
